Small changes to http interceptors

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -4612,3 +4612,8 @@ td.xdsoft_current, .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > 
     top: 40px !important
     width: 100% !important
     overflow: scroll !important
+.result-box
+  background: #fff
+  padding: 10px
+  width: 100%
+  border-bottom: 1px solid #ccc
