--- a/assets/partials/search.html
+++ b/assets/partials/search.html
@@ -1,9 +1,18 @@
 <section class="jr-body">
 	<div class="container">
-		<span ng-repeat="r in restaurants">
-			{{r.name}}
-		</span>
+		<div class="row">
+			<div class="col-lg-6">
+				Results: {{restaurants.length}}
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12" ng-repeat="r in restaurants | orderBy: 'name'| filter: query">
+				<a ui-sref="restaurant({restaurant_id: r.id})" >
+					<div class="result-box">
+					    {{r.name}}
+					</div>
+				</a>
+			</div>
+		</div>
 	</div>
-</section>
-</div>	
 </section>
