--- a/assets/partials/search.html
+++ b/assets/partials/search.html
@@ -2,7 +2,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6">
-				Results: {{restaurants.length}}
+				<h4 class="modal-title">
+					Results: {{restaurants.length}}
+				</h4>
 			</div>
 		</div>
 		<div class="row">
