--- a/index.hbs
+++ b/index.hbs
@@ -50,8 +50,8 @@ ng\:form {
 		</section>
    <div ui-view style="height: 100%" autoscroll="false"></div>
 	<script type="text/javascript" src="assets/js/configParams.js"></script>
+	<script src="http://maps.google.com/maps/api/js"></script>
 	<script type="text/javascript" src="assets/dist/{{"vendor.js"}}"></script>
-	<script type="text/javascript" src="bower_components/angular-google-plus/dist/angular-google-plus.js"></script>
 	<script type="text/javascript" src="assets/dist/{{"templates.js"}}"></script>
      <script>
 
@@ -61,7 +61,7 @@ ng\:form {
      	'ui.bootstrap',
      	'templates',
      	'angular-loading-bar',
-     	// 'simplePagination'
+     	'ngMap'
      	]);
      function bootstrapApplication(){
      	angular.element(document).ready(function() {
