--- a/assets/partials/restaurant.html
+++ b/assets/partials/restaurant.html
@@ -18,13 +18,19 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-12">
-				<h4 class="modal-title">
-					Comments for {{restaurant.name}}
-				</h4>
-				<p class="para-text" ng-repeat="r in restaurant.review" ng-if="restaurant.review">
-					{{r}}
-				</p>
+			<div class="col-lg-6">
+				<div class="panel-default panel">
+					<div class="panel-heading">
+						<h4 class="modal-title">
+							Comments for {{restaurant.name}}
+						</h4>
+					</div>
+					<div class="panel-body">
+						<p class="para-text" ng-repeat="r in restaurant.review" ng-if="restaurant.review">
+							{{r}}
+						</p>
+					</div>
+				</div>
 			</div>
 			<div class="col-lg-6">
 				<div class="panel panel-default">
